# substate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: classes.md
examples/schemas/: student.json
include/qsubstate/: MappingNode.h  Property.h  StructNode.h  qsubstate_global.h
include/qsubstate/private/: MappingNode_p.h  StructNode_p.h
include/substate/: Action.h  ArrayView.h  BinaryStream.h  BytesNode.h  FilesystemStorageEngine.h  Model.h  Node.h  Notification.h  SheetNode.h  StandardStorageEngine.h  StorageEngine.h  Stream.h  TwoPhaseObject.h  VectorNode.h  substate_global.h
include/substate/private/: BytesNode_p.h  ModelApi_p.h  Model_p.h  Node_p.h  SheetNode_p.h  VectorNode_p.h
src/: CMakeLists.txt
src/qsubstate/: CMakeLists.txt  MappingNode.cpp  Property.cpp  StructNode.cpp
src/sqliteengine/: CMakeLists.txt  sqliteengine.cpp  sqliteengine.h  sqliteengine_global.h  sqliteengine_p.h
src/substate/: Action.cpp  ArrayView.cpp  BinaryStream.cpp  BytesNode.cpp  CMakeLists.txt  FilesystemStorageEngine.cpp  Model.cpp  Node.cpp  Notification.cpp  SheetNode.cpp  StandardStorageEngine.cpp  StorageEngine.cpp  Stream.cpp  TwoPhaseObject.cpp  VectorNode.cpp  document.cpp  document.h  document_p.h  node.cpp  node.h  stream.h  substate_global.h  substate_utils.cpp  substate_utils_p.h  substateglobal.h  substateglobal_p.h  valueitem.cpp  valueitem.h  variant.cpp  variant.h
src/substate-qt/: CMakeLists.txt  arrayentity.cpp  arrayentity.h  entity.cpp  entity.h  entity_p.h  intarray.cpp  intarray.h  mappingentity.cpp  mappingentity.h  qsubstate_global.h  qsubstateglobal.cpp  qsubstateglobal.h  qsubstateglobal_p.h  sheetentity.cpp  sheetentity.h  structentity.cpp  structentity.h  vectorentity.cpp  vectorentity.h
src/substate/actions/: action.cpp  action.h  actionhelper.cpp  actionhelper.h
src/substate/core/: bytearray.cpp  bytearray.h  sender.cpp  sender.h  stream.cpp  stream.h  variant.cpp  variant.h
src/substate/engines/: engine.cpp  engine.h  engine_p.h  fsengine.cpp  fsengine.h  fsengine_p.h  memengine.cpp  memengine.h  memengine_p.h
src/substate/kernel/: bytearray.cpp  bytearray.h  stream.h  variant.cpp  variant.h
src/substate/model/: action.cpp  action.h  bytesnode.cpp  bytesnode.h  bytesnode_p.h  mappingnode.cpp  mappingnode.h  mappingnode_p.h  model.cpp  model.h  model_p.h  node.cpp  node.h  node_p.h  nodehelper.cpp  nodehelper.h  property.cpp  property.h  sender.cpp  sender.h  sender_p.h  sheetnode.cpp  sheetnode.h  sheetnode_p.h  structnode.cpp  structnode.h  structnode_p.h  vectornode.cpp  vectornode.h  vectornode_p.h
src/substate/operations/: operation.cpp  operation.h
src/substate/serialization/: variant.cpp  variant.h
tests/: CMakeLists.txt
tests/batch/: CMakeLists.txt  main.cpp
tests/cli/: CMakeLists.txt  main.cpp
tests/variant/: CMakeLists.txt  main.cpp  point.cpp  point.h
tools/: CMakeLists.txt
tools/qormc/: CMakeLists.txt  main.cpp
